--- a/hackerrank_js10/arrays.html
+++ b/hackerrank_js10/arrays.html
@@ -104,7 +104,8 @@
 
 
     // ## Array Cardio Day 2
-    // will look at arrays
+    // will look at arrays tomorrow
+    // and clone and look at bas project 
 
     const people = [
       { name: 'Wes', year: 1988 },
